--- a/frontend/src/customStyles.css
+++ b/frontend/src/customStyles.css
@@ -16,9 +16,10 @@
   right: 10px; */
 }
 
-#square-border {
+#channel-button {
   border-radius: 0px;
   border-color: transparent;
+  text-overflow: clip;
 }
 
 #channels-image-plus:hover {
@@ -69,6 +70,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  will-change: transform;
   }
   
 #language-button {
@@ -76,10 +78,30 @@
   position: relative;
   width: 40px;
   height: 38px;
+  border-color: transparent;
+  cursor: pointer;
+  transition: all .3s;
+  will-change: transform;
 }
 
-#language-button {
-  border-color: transparent;
+#language-button:hover {
+  transform: scale(1.1);
+}
+
+#language-button:active {
+  transform: scale(.98);
+}
+
+#language-button:hover #change-lang-img {
+  backface-visibility: hidden;
+}
+
+#language-button:active #change-lang-img {
+  backface-visibility: hidden;
+}
+
+#channels-col {
+  width: 256px;
 }
 
 @media (max-width: 1055px) {
