--- a/frontend/src/customStyles.css
+++ b/frontend/src/customStyles.css
@@ -100,6 +100,15 @@
   backface-visibility: hidden;
 }
 
+.Toastify__toast {
+  top: 60px !important;
+  left: 68px !important;
+  width: 230px !important;
+  height: 74px !important;
+  font-size: 14px;
+  text-align: center;
+}
+
 @media (max-width: 1055px) {
   #signIn-login-button {
     margin-top: 40px;
